--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">	
+	<link rel="manifest" href="manifest.json">
     <title>RoadRageCapybara</title>
     <style>
         /* Styles de base pour le corps de la page */
@@ -252,6 +253,7 @@
 	</script>
 </body>
 </html>
+
 
 
 
